--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -16,7 +16,7 @@
  * limitations under the License.
  */
 --><resources>
-  <string name="app_name">BAIKALOS Extras</string>
+  <string name="app_name">BaikalOS Extras</string>
   <!-- Dashboard -->
   <string name="user_interface_category">UI</string>
   <string name="system_category">System</string>
@@ -43,7 +43,7 @@
   <string name="clock_date_string_edittext_summary">Eingabe</string>
   <string name="menu_cancel">Abbrechen</string>
   <string name="menu_save">Speichern</string>
-  <!-- Statusbar BAIKALOS logo -->
+  <!-- Statusbar BaikalOS logo -->
   <!-- Statusbar categories -->
   <!-- Show 4G instead of LTE -->
   <!-- Notifications -->
@@ -123,7 +123,7 @@
   <string name="system_animations_summary">Einstellungen zu verschiedenen Animationen</string>
   <string name="custom_bootanimation_title">Boot Animation</string>
   <string name="custom_bootanimation_summary">Wählen Sie Ihre neue Boot Animation.\nJede Änderung der aktuellen Animation wird im
-Ordner BAIKALOS_backup gesichert.\nAlte Sicherungen müssen manuell gelöscht werden, wenn sie nicht mehr benötigt werden.</string>
+Ordner BaikalOS_backup gesichert.\nAlte Sicherungen müssen manuell gelöscht werden, wenn sie nicht mehr benötigt werden.</string>
   <string name="bootanimation_preview">Vorschau der Bootanimation</string>
   <string name="bootanimation_set_custom">Eigene aktivieren...</string>
   <string name="bootanimation_creating_preview">Erzeuge Vorschau...</string>
@@ -163,12 +163,12 @@ Ordner BAIKALOS_backup gesichert.\nAlte Sicherungen müssen manuell gelöscht we
   <string name="log_it_dialog_title">Loslegen</string>
   <string name="logcat_warning">Teile das oder GTFO!</string>
   <string name="share_title">Teilen...</string>
-  <string name="log_it_share_subject">BAIKALOS logs</string>
+  <string name="log_it_share_subject">BaikalOS logs</string>
   <string name="log_it_now_summary">Bitte warten, während die Logdateien erzeugt werden</string>
   <string name="log_it_logs_in_progress">Logdateien werden erzeugt…</string>
   <string name="log_it_share_type_title">Methode zur Übermittlung</string>
   <string name="log_it_share_type_zip">ZIP-Datei</string>
-  <string name="log_it_share_type_haste">Upload zur BAIKALOS hastebin-Seite</string>
+  <string name="log_it_share_type_haste">Upload zur BaikalOS hastebin-Seite</string>
   <string name="log_it_share_via">Teilen über</string>
   <!-- Panel porn -->
   <string name="panel_porn_title">UI-Anpassungen</string>
@@ -186,7 +186,7 @@ Ordner BAIKALOS_backup gesichert.\nAlte Sicherungen müssen manuell gelöscht we
   <string name="theme_dark">Dunkel</string>
   <string name="theme_dark_more_accent">Dunkel mit Akzentfarbe</string>
   <string name="ae_launcher_enabled_title">Symbol in App-Übersicht anzeigen</string>
-  <string name="ae_launcher_enabled_summary">Zeigen BAIKALOS Extras in der App-Übersicht</string>
+  <string name="ae_launcher_enabled_summary">Zeigen BaikalOS Extras in der App-Übersicht</string>
   <string name="ae_launcher_enabled_update">Sichtbarkeit des Symbols aktualisiert. Es kann etwas dauern bis die Änderung wirksam wird</string>
   <!-- About -->
   <string name="about_title">Über</string>
@@ -194,7 +194,7 @@ Ordner BAIKALOS_backup gesichert.\nAlte Sicherungen müssen manuell gelöscht we
   <string name="weblinks_category">Web-Links</string>
   <string name="info_category">Informationen</string>
   <string name="baikalos_website_title">Internetseite</string>
-  <string name="baikalos_website_summary">Besuche die Website vom BAIKALOS</string>
+  <string name="baikalos_website_summary">Besuche die Website vom BaikalOS</string>
   <string name="g_plus_title">G+ Community</string>
   <string name="g_plus_summary">Besuche unsere Google+ Community</string>
   <string name="baikalos_gerrit_title">Gerrit</string>
@@ -202,7 +202,7 @@ Ordner BAIKALOS_backup gesichert.\nAlte Sicherungen müssen manuell gelöscht we
   <string name="baikalos_changelog_title">Änderungsprotokoll</string>
   <string name="baikalos_changelog_summary">Zeige letzte Änderungen im ROM</string>
   <string name="baikalos_downloads_title">Downloads</string>
-  <string name="baikalos_downloads_summary">Besuche die BAIKALOS Webseite mit Downloads für dein Gerät</string>
+  <string name="baikalos_downloads_summary">Besuche die BaikalOS Webseite mit Downloads für dein Gerät</string>
   <string name="baikalos_ota_title">OTA Aktualisierung</string>
   <string name="baikalos_ota_summary">Aktualisierungsprüfung für die installierte ROM-Version</string>
   <string name="stats_title">Statistiken</string>
