--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -16,7 +16,7 @@
  * limitations under the License.
  */
 --><resources>
-  <string name="app_name">BAIKALOS Extrák</string>
+  <string name="app_name">BaikalOS Extrák</string>
   <!-- Dashboard -->
   <string name="user_interface_category">Felhasználói felület</string>
   <string name="system_category">Rendszer</string>
@@ -43,7 +43,7 @@
   <string name="clock_date_string_edittext_summary">Szövegbevitel</string>
   <string name="menu_cancel">Törlés</string>
   <string name="menu_save">Mentés</string>
-  <!-- Statusbar BAIKALOS logo -->
+  <!-- Statusbar BaikalOS logo -->
   <!-- Statusbar categories -->
   <!-- Show 4G instead of LTE -->
   <!-- Notifications -->
@@ -122,7 +122,7 @@
   <string name="system_animations_title">Kijelző és animációk</string>
   <string name="system_animations_summary">Rendszeranimációk</string>
   <string name="custom_bootanimation_title">Bootanimáció</string>
-  <string name="custom_bootanimation_summary">Válassza ki a bootanimációt. Minden egyes változtatásakor biztonsági mentés készül a jelenlegi animációról a belső tároló BAIKALOS_backup mappába. Amire nincs szükség törölje manuálisan.</string>
+  <string name="custom_bootanimation_summary">Válassza ki a bootanimációt. Minden egyes változtatásakor biztonsági mentés készül a jelenlegi animációról a belső tároló BaikalOS_backup mappába. Amire nincs szükség törölje manuálisan.</string>
   <string name="bootanimation_preview">Bootanimation előnézete</string>
   <string name="bootanimation_set_custom">Egyedi beállítása...</string>
   <string name="bootanimation_creating_preview">Előnézet létrehozása...</string>
@@ -167,7 +167,7 @@
   <string name="log_it_logs_in_progress">Naplók létrehozása folyamatban…</string>
   <string name="log_it_share_type_title">Megosztási módszer</string>
   <string name="log_it_share_type_zip">ZIP-fájl</string>
-  <string name="log_it_share_type_haste">Feltöltés BAIKALOS Haste használatával</string>
+  <string name="log_it_share_type_haste">Feltöltés BaikalOS Haste használatával</string>
   <string name="log_it_share_via">Megosztás ezzel</string>
   <!-- Panel porn -->
   <string name="panel_porn_title">Áttetszősségi beállítások</string>
@@ -176,7 +176,7 @@
   <!-- Power menu and dialogs opacity -->
   <!-- AE settings -->
   <string name="ae_settings_title">AE testreszabás</string>
-  <string name="ae_settings_summary">Az BAIKALOS extrák viselkedésének és kinézetének módosítása</string>
+  <string name="ae_settings_summary">Az BaikalOS extrák viselkedésének és kinézetének módosítása</string>
   <string name="theme_title">Téma</string>
   <string name="theme_default">Alapértelmezett beállítások téma</string>
   <string name="theme_default_more_accent">Több szín</string>
@@ -185,7 +185,7 @@
   <string name="theme_dark">Sötét</string>
   <string name="theme_dark_more_accent">Sötét több színnel</string>
   <string name="ae_launcher_enabled_title">Indító ikon megjelenítése</string>
-  <string name="ae_launcher_enabled_summary">BAIKALOS extrák megjelenítése az indítón</string>
+  <string name="ae_launcher_enabled_summary">BaikalOS extrák megjelenítése az indítón</string>
   <string name="ae_launcher_enabled_update">Az indító ikon megjelenítése frissítve. A változás érvénybelépéséhez szükséges néhány perc</string>
   <!-- About -->
   <string name="about_title">Rólunk</string>
@@ -193,7 +193,7 @@
   <string name="weblinks_category">Linkek</string>
   <string name="info_category">Infó</string>
   <string name="baikalos_website_title">Weboldal</string>
-  <string name="baikalos_website_summary">Látogasson el a BAIKALOS honlapjára</string>
+  <string name="baikalos_website_summary">Látogasson el a BaikalOS honlapjára</string>
   <string name="g_plus_title">G+ közösség</string>
   <string name="g_plus_summary">Látogasson el a Google + közösségünkhöz</string>
   <string name="baikalos_gerrit_title">Gerrit</string>
@@ -201,9 +201,9 @@
   <string name="baikalos_changelog_title">Változások</string>
   <string name="baikalos_changelog_summary">Nézd meg a legutóbbi változásokat a ROM-ban</string>
   <string name="baikalos_downloads_title">Letöltések</string>
-  <string name="baikalos_downloads_summary">Látogassa meg készüléke BAIKALOS letöltőközpontját</string>
+  <string name="baikalos_downloads_summary">Látogassa meg készüléke BaikalOS letöltőközpontját</string>
   <string name="baikalos_ota_title">Rendszerfrissítés</string>
-  <string name="baikalos_ota_summary">BAIKALOS frissítések keresése</string>
+  <string name="baikalos_ota_summary">BaikalOS frissítések keresése</string>
   <string name="stats_title">Statisztika</string>
   <string name="stats_summary">Belépés/kilépés a névtelen statisztika programba/ból</string>
   <string name="device_maintainer_title">Készülékfelelősök</string>
