--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -43,7 +43,7 @@
   <string name="clock_date_string_edittext_summary">Introducir cadena</string>
   <string name="menu_cancel">Cancelar</string>
   <string name="menu_save">Guardar</string>
-  <!-- Statusbar BAIKALOS logo -->
+  <!-- Statusbar BaikalOS logo -->
   <!-- Statusbar categories -->
   <!-- Show 4G instead of LTE -->
   <!-- Notifications -->
@@ -167,7 +167,7 @@
   <string name="log_it_logs_in_progress">Creando logs…</string>
   <string name="log_it_share_type_title">Forma de envío</string>
   <string name="log_it_share_type_zip">Archivo ZIP</string>
-  <string name="log_it_share_type_haste">Subir a BAIKALOS ya</string>
+  <string name="log_it_share_type_haste">Subir a BaikalOS ya</string>
   <string name="log_it_share_via">Compartir a través de</string>
   <!-- Panel porn -->
   <string name="panel_porn_title">Estilo de paneles</string>
@@ -185,7 +185,7 @@
   <string name="theme_dark">Oscuro</string>
   <string name="theme_dark_more_accent">Oscuro con más color</string>
   <string name="ae_launcher_enabled_title">Mostrar icono del launcher</string>
-  <string name="ae_launcher_enabled_summary">Mostrar Extras BAIKALOS en launcher</string>
+  <string name="ae_launcher_enabled_summary">Mostrar Extras BaikalOS en launcher</string>
   <string name="ae_launcher_enabled_update">Visibilidad del icono de Launcher actualizada. Podría tomar algún tiempo para que el cambio surta efecto</string>
   <!-- About -->
   <string name="about_title">Acerca de</string>
@@ -193,15 +193,15 @@
   <string name="weblinks_category">Enlaces</string>
   <string name="info_category">Información</string>
   <string name="baikalos_website_title">Sitio web</string>
-  <string name="baikalos_website_summary">Visite la página web de BAIKALOS</string>
+  <string name="baikalos_website_summary">Visite la página web de BaikalOS</string>
   <string name="g_plus_title">Conunidad G+</string>
   <string name="g_plus_summary">Visitar nuestra comunidad en Google+</string>
   <string name="baikalos_gerrit_title">Gerrit</string>
   <string name="baikalos_gerrit_summary">Visitar nuestro Gerrit para saber en qué estamos trabajando</string>
   <string name="baikalos_changelog_title">Lista de cambios</string>
-  <string name="baikalos_changelog_summary">Ver la lista de cambios recientes de BAIKALOS</string>
+  <string name="baikalos_changelog_summary">Ver la lista de cambios recientes de BaikalOS</string>
   <string name="baikalos_downloads_title">Descargas</string>
-  <string name="baikalos_downloads_summary">Visitar la página de descargas de BAIKALOS para tu dispositivo</string>
+  <string name="baikalos_downloads_summary">Visitar la página de descargas de BaikalOS para tu dispositivo</string>
   <string name="baikalos_ota_title">Actualizaciones del sistema</string>
   <string name="baikalos_ota_summary">Comprobar actualizaciones</string>
   <string name="stats_title">Estadísticas</string>
