--- a/res/values-no-rNO/strings.xml
+++ b/res/values-no-rNO/strings.xml
@@ -31,7 +31,7 @@
   <!-- Double tap to sleep on status bar -->
   <!-- Statusbar Clock options -->
   <string name="menu_cancel">Avbryt</string>
-  <!-- Statusbar BAIKALOS logo -->
+  <!-- Statusbar BaikalOS logo -->
   <!-- Statusbar categories -->
   <!-- Show 4G instead of LTE -->
   <!-- Notifications -->
@@ -105,7 +105,7 @@
   <string name="about_title">Om</string>
   <string name="baikalos_changelog_title">Endringslogg</string>
   <string name="baikalos_downloads_title">Nedlastinger</string>
-  <string name="baikalos_ota_summary">Se etter BAIKALOS oppdateringer</string>
+  <string name="baikalos_ota_summary">Se etter BaikalOS oppdateringer</string>
   <!-- Other / general purpose -->
   <string name="on">På</string>
   <string name="off">Av</string>
