--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -16,7 +16,7 @@
  * limitations under the License.
  */
 --><resources>
-  <string name="app_name">BAIKALOS Extras</string>
+  <string name="app_name">BaikalOS Extras</string>
   <!-- Dashboard -->
   <string name="user_interface_category">UI</string>
   <string name="system_category">Sistema</string>
@@ -43,7 +43,7 @@
   <string name="clock_date_string_edittext_summary">Digite a sequência de caracteres</string>
   <string name="menu_cancel">Cancelar</string>
   <string name="menu_save">Salvar</string>
-  <!-- Statusbar BAIKALOS logo -->
+  <!-- Statusbar BaikalOS logo -->
   <!-- Statusbar categories -->
   <!-- Show 4G instead of LTE -->
   <!-- Notifications -->
@@ -122,7 +122,7 @@
   <string name="system_animations_title">Visor e animações</string>
   <string name="system_animations_summary">Animações do sistema</string>
   <string name="custom_bootanimation_title">Animação de inicialização</string>
-  <string name="custom_bootanimation_summary">Selecionar animação de inicialização personalizada. Em cada troca, a animação atual será copiada para a pasta BAIKALOS_backup no seu armazenamento interno. Animações antigas deverão ser excluídas manualmente se não forem mais necessárias.</string>
+  <string name="custom_bootanimation_summary">Selecionar animação de inicialização personalizada. Em cada troca, a animação atual será copiada para a pasta BaikalOS_backup no seu armazenamento interno. Animações antigas deverão ser excluídas manualmente se não forem mais necessárias.</string>
   <string name="bootanimation_preview">Visualizar animação de inicialização</string>
   <string name="bootanimation_set_custom">Definindo personalização...</string>
   <string name="bootanimation_creating_preview">Criando visualização...</string>
@@ -166,7 +166,7 @@
   <string name="log_it_logs_in_progress">Os logs estão sendo criados …</string>
   <string name="log_it_share_type_title">Método de compartilhamento</string>
   <string name="log_it_share_type_zip">Arquivos ZIP</string>
-  <string name="log_it_share_type_haste">Carregar para BAIKALOS Haste</string>
+  <string name="log_it_share_type_haste">Carregar para BaikalOS Haste</string>
   <string name="log_it_share_via">Compartilhar via</string>
   <!-- Panel porn -->
   <string name="panel_porn_title">Panel porn</string>
@@ -184,7 +184,7 @@
   <string name="theme_dark">Escuro</string>
   <string name="theme_dark_more_accent">Escuro com mais cor</string>
   <string name="ae_launcher_enabled_title">Mostrar ícone do launcher</string>
-  <string name="ae_launcher_enabled_summary">Mostrar BAIKALOS Extras no launcher</string>
+  <string name="ae_launcher_enabled_summary">Mostrar BaikalOS Extras no launcher</string>
   <string name="ae_launcher_enabled_update">Visibilidade de ícone do launcher atualizada. Pode levar algum tempo para que a alteração tenha efeito</string>
   <!-- About -->
   <string name="about_title">About</string>
@@ -192,15 +192,15 @@
   <string name="weblinks_category">Links da web</string>
   <string name="info_category">Informações</string>
   <string name="baikalos_website_title">Site</string>
-  <string name="baikalos_website_summary">Visite o site do BAIKALOS</string>
+  <string name="baikalos_website_summary">Visite o site do BaikalOS</string>
   <string name="g_plus_title">G+ community</string>
   <string name="g_plus_summary">Participe da nossa comunidade do Google +</string>
   <string name="baikalos_gerrit_title">Gerrit</string>
   <string name="baikalos_gerrit_summary">Visite o nosso Gerrit para saber no que estamos trabalhando</string>
   <string name="baikalos_changelog_title">Mudanças</string>
-  <string name="baikalos_changelog_summary">Exibir alterações recentes feitas no BAIKALOS</string>
+  <string name="baikalos_changelog_summary">Exibir alterações recentes feitas no BaikalOS</string>
   <string name="baikalos_downloads_title">Downloads</string>
-  <string name="baikalos_downloads_summary">Visite a página de download BAIKALOS para o seu dispositivo</string>
+  <string name="baikalos_downloads_summary">Visite a página de download BaikalOS para o seu dispositivo</string>
   <string name="baikalos_ota_title">Centro de Atualização</string>
   <string name="baikalos_ota_summary">Verificar se há atualizações</string>
   <string name="stats_title">Estatísticas</string>
