--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -43,7 +43,7 @@
   <string name="clock_date_string_edittext_summary">Yazı girin</string>
   <string name="menu_cancel">İptal</string>
   <string name="menu_save">Kaydet</string>
-  <!-- Statusbar BAIKALOS logo -->
+  <!-- Statusbar BaikalOS logo -->
   <!-- Statusbar categories -->
   <!-- Show 4G instead of LTE -->
   <!-- Notifications -->
@@ -122,7 +122,7 @@
   <string name="system_animations_title">Animasyonlar</string>
   <string name="system_animations_summary">Çeşitli sistem animasyonları</string>
   <string name="custom_bootanimation_title">Açılış animasyonu</string>
-  <string name="custom_bootanimation_summary">Özel ön yükleme seçin. Her değişiklikte, geçerli animasyon dahili depolama alanınızdaki BAIKALOS_backup klasörüne yedeklenecektir. Eskiler, gerek duyulmadıkça manuel olarak silinmelidir.</string>
+  <string name="custom_bootanimation_summary">Özel ön yükleme seçin. Her değişiklikte, geçerli animasyon dahili depolama alanınızdaki BaikalOS_backup klasörüne yedeklenecektir. Eskiler, gerek duyulmadıkça manuel olarak silinmelidir.</string>
   <string name="bootanimation_preview">Açılış animasyonu ön izleme</string>
   <string name="bootanimation_set_custom">Özel ayarla</string>
   <string name="bootanimation_creating_preview">Önizleme oluşturuluyor...</string>
@@ -185,7 +185,7 @@
   <string name="theme_dark">Karanlık</string>
   <string name="theme_dark_more_accent">Daha fazla karanlık renk</string>
   <string name="ae_launcher_enabled_title">Başlatıcı simgesini göster</string>
-  <string name="ae_launcher_enabled_summary">Başlatıcıda BAIKALOS Ekstraları göster</string>
+  <string name="ae_launcher_enabled_summary">Başlatıcıda BaikalOS Ekstraları göster</string>
   <string name="ae_launcher_enabled_update">Başlatıcı simgesi görünürlüğü güncellendi. Yapılan değişikliklerin görünmesi biraz zaman alabilir</string>
   <!-- About -->
   <string name="about_title">Hakkında</string>
@@ -193,17 +193,17 @@
   <string name="weblinks_category">Web bağlantısı</string>
   <string name="info_category">Bilgiler</string>
   <string name="baikalos_website_title">İnternet sitesi</string>
-  <string name="baikalos_website_summary">BAIKALOS İnternet sitesini ziyaret et</string>
+  <string name="baikalos_website_summary">BaikalOS İnternet sitesini ziyaret et</string>
   <string name="g_plus_title">G+ toğluluğu</string>
   <string name="g_plus_summary">Google+ topluluğumuzu ziyaret et</string>
   <string name="baikalos_gerrit_title">Gerrit</string>
   <string name="baikalos_gerrit_summary">Neler üzerinde çalıştığımızı görmek için gerrit sayfamızı ziyaret et</string>
   <string name="baikalos_changelog_title">Değişiklikler</string>
-  <string name="baikalos_changelog_summary">BAIKALOS\'de yapılan son değişiklikleri görüntüle</string>
+  <string name="baikalos_changelog_summary">BaikalOS\'de yapılan son değişiklikleri görüntüle</string>
   <string name="baikalos_downloads_title">İndirmeler</string>
-  <string name="baikalos_downloads_summary">BAIKALOS indirme sayfasını ziyaret et</string>
+  <string name="baikalos_downloads_summary">BaikalOS indirme sayfasını ziyaret et</string>
   <string name="baikalos_ota_title">Güncelleme merkezi</string>
-  <string name="baikalos_ota_summary">BAIKALOS güncellemelerini denetle</string>
+  <string name="baikalos_ota_summary">BaikalOS güncellemelerini denetle</string>
   <string name="stats_title">İstatistikler</string>
   <string name="stats_summary">Anonim istatistiklerin seçilmesi ve açılması</string>
   <string name="device_maintainer_title">Cihaz sorumlusu</string>
