--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -43,7 +43,7 @@
   <string name="clock_date_string_edittext_summary">輸入字串</string>
   <string name="menu_cancel">取消</string>
   <string name="menu_save">儲存</string>
-  <!-- Statusbar BAIKALOS logo -->
+  <!-- Statusbar BaikalOS logo -->
   <!-- Statusbar categories -->
   <!-- Show 4G instead of LTE -->
   <!-- Notifications -->
@@ -122,7 +122,7 @@
   <string name="system_animations_title">動畫</string>
   <string name="system_animations_summary">系統動畫</string>
   <string name="custom_bootanimation_title">開機動畫</string>
-  <string name="custom_bootanimation_summary">請選擇自訂開機動畫。 每次更改目前動畫將被備份到內部儲存空間具有日期的 BAIKALOS_backup 資料夾中。 如果沒有必要，請刪除它。</string>
+  <string name="custom_bootanimation_summary">請選擇自訂開機動畫。 每次更改目前動畫將被備份到內部儲存空間具有日期的 BaikalOS_backup 資料夾中。 如果沒有必要，請刪除它。</string>
   <string name="bootanimation_preview">開機動畫預覽</string>
   <string name="bootanimation_set_custom">設定自訂...</string>
   <string name="bootanimation_creating_preview">正在建立預覽...</string>
@@ -167,7 +167,7 @@
   <string name="log_it_logs_in_progress">正在創建日誌並…</string>
   <string name="log_it_share_type_title">分享方法</string>
   <string name="log_it_share_type_zip">ZIP 檔</string>
-  <string name="log_it_share_type_haste">上傳到 BAIKALOS Haste</string>
+  <string name="log_it_share_type_haste">上傳到 BaikalOS Haste</string>
   <string name="log_it_share_via">分享透過</string>
   <!-- Panel porn -->
   <string name="panel_porn_title">面板顏色</string>
@@ -185,7 +185,7 @@
   <string name="theme_dark">暗色</string>
   <string name="theme_dark_more_accent">更多深色的顏色</string>
   <string name="ae_launcher_enabled_title">顯示啟動器圖示</string>
-  <string name="ae_launcher_enabled_summary">在啟動器中顯示 BAIKALOS 附加功能</string>
+  <string name="ae_launcher_enabled_summary">在啟動器中顯示 BaikalOS 附加功能</string>
   <string name="ae_launcher_enabled_update">啟動器圖示可見性已更新。更改生效可能需要一些時間</string>
   <!-- About -->
   <string name="about_title">關於</string>
@@ -193,17 +193,17 @@
   <string name="weblinks_category">網站連結</string>
   <string name="info_category">資訊</string>
   <string name="baikalos_website_title">網站</string>
-  <string name="baikalos_website_summary">瀏覽 BAIKALOS 網站</string>
+  <string name="baikalos_website_summary">瀏覽 BaikalOS 網站</string>
   <string name="g_plus_title">G + 社群</string>
   <string name="g_plus_summary">瀏覽我們的 Google+ 社群</string>
   <string name="baikalos_gerrit_title">Gerrit</string>
   <string name="baikalos_gerrit_summary">瀏覽我們的 gerrit 知道我們在做什麼</string>
   <string name="baikalos_changelog_title">更新日誌</string>
-  <string name="baikalos_changelog_summary">檢視最近對 BAIKALOS 所做的更改</string>
+  <string name="baikalos_changelog_summary">檢視最近對 BaikalOS 所做的更改</string>
   <string name="baikalos_downloads_title">下載</string>
-  <string name="baikalos_downloads_summary">瀏覽您的裝置的 BAIKALOS 下載頁面</string>
+  <string name="baikalos_downloads_summary">瀏覽您的裝置的 BaikalOS 下載頁面</string>
   <string name="baikalos_ota_title">更新中心</string>
-  <string name="baikalos_ota_summary">檢查 BAIKALOS 更新</string>
+  <string name="baikalos_ota_summary">檢查 BaikalOS 更新</string>
   <string name="stats_title">統計</string>
   <string name="stats_summary">選擇/退出匿名統計</string>
   <string name="device_maintainer_title">裝置維護者</string>
